--- a/artifact_challenge_N3.ipynb
+++ b/artifact_challenge_N3.ipynb
@@ -8,7 +8,7 @@
    },
    "source": [
     "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#ARTIFACT-challenge-N3\" data-toc-modified-id=\"ARTIFACT-challenge-N3-1\">ARTIFACT challenge N3</a></span><ul class=\"toc-item\"><li><span><a href=\"#input-quantities\" data-toc-modified-id=\"input-quantities-1.1\">input quantities</a></span></li><li><span><a href=\"#search--for-solution\" data-toc-modified-id=\"search--for-solution-1.2\">search  for solution</a></span></li></ul></li><li><span><a href=\"#ARTIFACT-challenge-N1\" data-toc-modified-id=\"ARTIFACT-challenge-N1-2\">ARTIFACT challenge N1</a></span></li><li><span><a href=\"#ARTIFACT-challenge-N2\" data-toc-modified-id=\"ARTIFACT-challenge-N2-3\">ARTIFACT challenge N2</a></span></li></ul></div>"
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#input-quantities\" data-toc-modified-id=\"input-quantities-1\">input quantities</a></span></li><li><span><a href=\"#search--for-solution\" data-toc-modified-id=\"search--for-solution-2\">search  for solution</a></span></li></ul></div>"
    ]
   },
   {
